<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".ActivityPagos">

    <ImageView
        android:id="@+id/img_moneda"
        android:layout_width="134dp"
        android:layout_height="185dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="27dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/moneda"
        tools:ignore="ImageContrastCheck"
        android:contentDescription="@string/moneda" />

    <TextView
        android:id="@+id/txt_tituloPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="91dp"
        android:text="@string/pago"
        android:textSize="48sp"
        app:layout_constraintEnd_toStartOf="@+id/img_moneda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_labelTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="66dp"
        android:text="@string/total"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_tituloPago" />

    <TextView
        android:id="@+id/txt_labelComision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="40dp"
        android:text="@string/comision"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_labelTotal" />

    <TextView
        android:id="@+id/txt_totalMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="147dp"
        android:layout_marginTop="190dp"
        android:layout_marginEnd="201dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_labelTotal"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_comision"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginTop="42dp"
        android:layout_marginEnd="199dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_labelComision"
        app:layout_constraintTop_toBottomOf="@+id/txt_totalMain" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.552">

        <RadioButton
            android:id="@+id/rb_tarjeta"
            android:layout_width="199dp"
            android:layout_height="wrap_content"
            android:text="@string/pago_con_tarjeta"
            android:onClick="comision"/>

        <RadioButton
            android:id="@+id/rb_paypal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pago_con_paypal"
            android:onClick="comision"/>
    </RadioGroup>

    <TextView
        android:id="@+id/txt_labelTotalPagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="96dp"
        android:text="@string/total_a_pagar"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <TextView
        android:id="@+id/txt_totalFinal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="96dp"
        android:layout_marginEnd="207dp"
        android:text="@string/_0"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txt_labelTotalPagar"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

    <Button
        android:id="@+id/bt_pagar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="252dp"
        android:layout_marginTop="432dp"
        android:layout_marginEnd="71dp"
        android:text="@string/pagar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_moneda"
        android:onClick="pagoExitoso"/>
</androidx.constraintlayout.widget.ConstraintLayout>