<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="-20dp"
    tools:layout_editor_absoluteY="2dp">

    <TextView
        android:id="@+id/txt_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="166dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="187dp"
        android:gravity="center"
        android:text="@string/titulo"
        android:textColor="#4CAF50"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_labelDia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="337dp"
        android:text="@string/textoDia"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/sp_dia"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="21dp"
        android:layout_marginEnd="26dp"
        android:contentDescription="@string/hintSpinner"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_labelDia" />

    <EditText
        android:id="@+id/edt_cantidadEntradasMain"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="26dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="86dp"
        android:ems="10"
        android:hint="@string/hint_cantidadEntradas"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sp_dia"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/txt_labelEntradasDisponibles"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="239dp"
        android:text="@string/label2"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_cantidadEntradasMain" />

    <TextView
        android:id="@+id/txt_numeroEntradasDisponibles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="73dp"
        android:layout_marginTop="292dp"
        android:layout_marginEnd="165dp"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txt_labelEntradasDisponibles"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_calcularPrecios"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="212dp"
        android:layout_marginEnd="16dp"
        android:onClick="calcular_precios"
        android:text="@string/botonPrecios"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <TextView
        android:id="@+id/txt_labelPrecioEntradas"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="238dp"
        android:text="@string/precio_entradas"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_labelEntradasDisponibles" />

    <TextView
        android:id="@+id/txt_labelDescuento"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="238dp"
        android:text="@string/descuento_aplicado"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_labelPrecioEntradas" />

    <TextView
        android:id="@+id/txt_labelTotalMain"
        android:layout_width="157dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="238dp"
        android:text="@string/total"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_labelDescuento" />

    <Button
        android:id="@+id/btn_irPago"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="270dp"
        android:layout_marginTop="249dp"
        android:layout_marginEnd="32dp"
        android:onClick="irSegundaPantalla"
        android:text="@string/botonIrPago"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_calcularPrecios" />

    <TextView
        android:id="@+id/txt_precioEntradas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="436dp"
        android:layout_marginEnd="140dp"
        android:text="@string/_0"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toEndOf="@+id/txt_labelPrecioEntradas"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_descuento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="504dp"
        android:layout_marginEnd="139dp"
        android:text="@string/_0"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/txt_labelDescuento"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txt_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="41dp"
        android:layout_marginTop="576dp"
        android:layout_marginEnd="139dp"
        android:text="@string/_0"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toEndOf="@+id/txt_labelTotalMain"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>